--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.6",
-    "@mdx-js/react": "^1.6.6",
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.21.37",
-    "gatsby-image": "^2.4.13",
-    "gatsby-plugin-mdx": "^1.2.25",
-    "gatsby-plugin-sharp": "^2.6.19",
-    "gatsby-plugin-styled-components": "^3.3.2",
-    "gatsby-remark-images": "^3.3.19",
-    "gatsby-source-filesystem": "^2.3.19",
-    "gatsby-transformer-sharp": "^2.5.11",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.12.0",
+    "gatsby": "^2.30.3",
+    "gatsby-image": "^2.9.0",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-remark-images": "^3.9.0",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
