--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "terser": "^4.6.11"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
