--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "all": "0.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.30.3",
     "gatsby-image": "^2.9.0",
@@ -25,6 +26,7 @@
     "gatsby-remark-images": "^3.9.0",
     "gatsby-source-filesystem": "^2.9.1",
     "gatsby-transformer-sharp": "^2.10.1",
+    "module": "^1.2.5",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
