--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js-compat": "^3.8.3",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-page-creator": "^2.9.0",
     "gatsby-plugin-sharp": "^2.13.3",
