--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-page-creator": "^2.9.0",
     "gatsby-plugin-sharp": "^2.13.3",
     "gatsby-plugin-styled-components": "^3.9.0",
+    "gatsby-remark-gifs": "^1.0.0",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-sharp": "^2.11.0",
