--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-page-creator": "^2.9.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.13.3",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-remark-gifs": "^1.0.0",
@@ -35,6 +36,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "terser": "^4.8.0",
